crates/papyrus_storage/src/serializers/snapshots/papyrus_storage__serializers__serializers_test__hints_regression_hint_3054.snap
---
source: crates/papyrus_storage/src/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 11
- 238
- 1
- 32
- 0
- 0
- 4
- 0
- 1
- 253
- 255
- 2
- 145
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 0
- 1
- 0
- 3
- 0
- 0
- 4
- 0

