crates/papyrus_storage/src/serializers/snapshots/papyrus_storage__serializers__serializers_test__hints_regression_hint_3704.snap
---
source: crates/papyrus_storage/src/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 14
- 120
- 1
- 6
- 1
- 0
- 0
- 1
- 252
- 255

